miniflux/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: miniflux/miniflux:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "300m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
          readinessProbe:
            exec:
              command:
                - /usr/bin/miniflux
                - -healthcheck
                - auto
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - /usr/bin/miniflux
                - -healthcheck
                - auto
            initialDelaySeconds: 30
            periodSeconds: 10
        - name: postgres
          image: postgres:alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - pg_isready -U $POSTGRES_USER
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - pg_isready -U $POSTGRES_USER
            initialDelaySeconds: 60
            periodSeconds: 10
          volumeMounts:
            - name: postgres-storage
              mountPath: /data
        - name: nextflux
          image: electh/nextflux:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: data
