miniflux/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextflux-route
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik
  hostnames:
    - flux.lan-domain
    - flux.wan-domain
  rules:
    - backendRefs:
        - name: service
          port: 8300
